fix table to have better overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -182,3 +182,8 @@
 .payment-button {
   @apply inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
 }
+
+.overflow-x-auto {
+  max-height: 450px; /* Set a max height for scrolling */
+  overflow-y: auto;  /* Enable vertical scrolling */
+}
